feat: add localization strings for navbar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,10 @@
 {
+    "navbar": {
+        "about": "About",
+        "skills": "Skills",
+        "projects": "Projects"
+    },
+    
     "hero": {
         "greeting": "Hi, I'm Matt"
     }
