--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -7,5 +7,16 @@
     
     "hero": {
         "greeting": "こんにちは、マットです。"
+    },
+    "about": {
+        "title": "私について",
+        "from": "アメリカ出身です。",
+        "live": "今熊本市に住んでいます。",
+        "university": "大学で物理を専攻しました。",
+        "teach": "大学卒業後、日本で英語の先生になれました。",
+        "engineer1": "現在、チームで働くリモートソフトウェアエンジニア",
+        "engineer2": "とソロプロジェクト",
+        "hobby": "コーディングをしていないときは、ランニングやサイクリング、自然を楽しむのが好きです",
+        "collaborate": "プロジェクトをぜひご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
     }
 }
