--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -18,5 +18,12 @@
         "engineer2": "とソロプロジェクト",
         "hobby": "コーディングをしていないときは、ランニングやサイクリング、自然を楽しむのが好きです",
         "collaborate": "プロジェクトをぜひご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
+    },
+    "skills": {
+        "title": "スキル",
+        "languages": "言語",
+        "frontend": "フロントエンド",
+        "backend": "バックエンドとデータベース",
+        "testing": "テストとデプロイ"
     }
 }
