feat: add localization for project section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,5 +24,18 @@
         "frontend": "Frontend",
         "backend": "Backend and Database",
         "testing": "Testing and Deployment"
+    },
+    "projects": {
+        "title": "Projects",
+        "team": "Team",
+        "findadoc-title": "Find a Doc, Japan",
+        "findadoc-description": "An NPO that helps people find healthcare in Japan in their language.",
+        "arcane-kitchen-title": "Arcane Kitchen",
+        "arcane-kitchen-description": "A fantasy RPG themed meal planning app that aims to motivate users to eat healthy in a fun and engaging way.",
+        "solo": "Solo",
+        "ichigo-title": "IchiGo",
+        "ichigo-description": "A game where you are so excited to eat strawberries that you just keep running faster and faster! But be careful not to hit the other runners! See how long you can keep running in Ichi Go!",
+        "goraku-title": "GoRaku",
+        "goraku-description": "Aims to assist language learners who enjoy watching shows or anime in their target language. GoRaku can take an audio clip in the target language from your favorite show and automatically turn that audio into a text flash card with a front and back."
     }
 }
