--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -25,5 +25,18 @@
         "frontend": "フロントエンド",
         "backend": "バックエンドとデータベース",
         "testing": "テストとデプロイ"
+    },
+    "projects": {
+        "title": "プロジェクト",
+        "team": "チーム",
+        "findadoc-title": "Find a Doc, Japan",
+        "findadoc-description": "日本での医療を母国語で探す手助けをするNPO。",
+        "arcane-kitchen-title": "Arcane Kitchen",
+        "arcane-kitchen-description": "ユーザーが楽しく魅力的な方法で健康的な食事を摂るよう動機付けることを目的とした、ファンタジー RPG をテーマにした食事計画アプリです。",
+        "solo": "ソロ",
+        "ichigo-title": "IchiGo",
+        "ichigo-description": "いちごを食べるのが待ちきれなくて、どんどん速く走ってしまうゲーム！でも、他のランナーにぶつからないように気をつけて！「Ichi Go!」でどれだけ長く走り続けられるか試してみましょう！",
+        "goraku-title": "GoRaku",
+        "goraku-description": "目標言語で番組やアニメを楽しむ言語学習者を支援することを目的としています。GoRakuは、お気に入りの番組から目標言語の音声クリップを取得し、自動的に表裏付きのテキストフラッシュカードに変換します。"
     }
 }
