--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -10,14 +10,14 @@
     },
     "about": {
         "title": "私について",
-        "from": "アメリカ出身です。",
-        "live": "今熊本市に住んでいます。",
+        "from": "アメリカ出身で",
+        "live": "現在は熊本市に住んでいます。",
         "university": "大学で物理を専攻しました。",
-        "teach": "大学卒業後、日本で英語の先生になれました。",
-        "engineer1": "現在、チームで働くリモートソフトウェアエンジニア",
-        "engineer2": "とソロプロジェクト",
-        "hobby": "コーディングをしていないときは、ランニングやサイクリング、自然を楽しむのが好きです",
-        "collaborate": "プロジェクトをぜひご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
+        "teach": "大学卒業後、日本で英語の先生(ALT)として働いていた経験があります。",
+        "engineer1": "現在は、リモートソフトウェアエンジニアとして、チームプロジェクト",
+        "engineer2": "とソロプロジェクトをしています。",
+        "hobby": "趣味は、ランニングやサイクリングなど自然を楽しむことが好きです。",
+        "collaborate": "ぜひ私のプロジェクトをご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
     },
     "skills": {
         "title": "スキル",
@@ -29,14 +29,14 @@
     "projects": {
         "title": "プロジェクト",
         "team": "チーム",
-        "findadoc-title": "Find a Doc, Japan",
-        "findadoc-description": "日本での医療を母国語で探す手助けをするNPO。",
-        "arcane-kitchen-title": "Arcane Kitchen",
-        "arcane-kitchen-description": "ユーザーが楽しく魅力的な方法で健康的な食事を摂るよう動機付けることを目的とした、ファンタジー RPG をテーマにした食事計画アプリです。",
+        "findadoc-title": "FINDADOC, JAPAN",
+        "findadoc-description": "日本に住んでいる外国人向けに、医療機関を探す際、母国語で探す手助けをするNPO団体",
+        "arcane-kitchen-title": "アーケーンキッチン",
+        "arcane-kitchen-description": "ユーザーが楽しく、健康的な食事を摂ることを目的としたファンタジーRPGがテーマの食事計画アプリ",
         "solo": "ソロ",
-        "ichigo-title": "IchiGo",
-        "ichigo-description": "いちごを食べるのが待ちきれなくて、どんどん速く走ってしまうゲーム！でも、他のランナーにぶつからないように気をつけて！「Ichi Go!」でどれだけ長く走り続けられるか試してみましょう！",
-        "goraku-title": "GoRaku",
-        "goraku-description": "目標言語で番組やアニメを楽しむ言語学習者を支援することを目的としています。GoRakuは、お気に入りの番組から目標言語の音声クリップを取得し、自動的に表裏付きのテキストフラッシュカードに変換します。"
+        "ichigo-title": "いち Go!",
+        "ichigo-description": "どれだけ長く走り続けられるか試してみて！",
+        "goraku-title": "ごらく",
+        "goraku-description": "言語学習者向けに、お気に入りのアニメや番組から音声クリップを取得し、自動的に裏表のフラッシュカードに変換できるアプリ"
     }
 }
