--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -1,42 +1,44 @@
 {
-    "navbar": {
-        "about": "私について",
-        "skills": "スキル",
-        "projects": "プロジェクト"
-    },
-    
-    "hero": {
-        "greeting": "こんにちは、マットです。"
-    },
-    "about": {
-        "title": "私について",
-        "from": "アメリカ出身で",
-        "live": "現在は熊本市に住んでいます。",
-        "university": "大学で物理を専攻しました。",
-        "teach": "大学卒業後、日本で英語の先生(ALT)として働いていた経験があります。",
-        "engineer1": "現在は、リモートソフトウェアエンジニアとして、チームプロジェクト",
-        "engineer2": "とソロプロジェクトをしています。",
-        "hobby": "趣味は、ランニングやサイクリングなど自然を楽しむことが好きです。",
-        "collaborate": "ぜひ私のプロジェクトをご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
-    },
-    "skills": {
-        "title": "スキル",
-        "languages": "言語",
-        "frontend": "フロントエンド",
-        "backend": "バックエンドとデータベース",
-        "testing": "テストとデプロイ"
-    },
-    "projects": {
-        "title": "プロジェクト",
-        "team": "チーム",
-        "findadoc-title": "FINDADOC, JAPAN",
-        "findadoc-description": "日本に住んでいる外国人向けに、医療機関を探す際、母国語で探す手助けをするNPO団体",
-        "arcane-kitchen-title": "アーケーンキッチン",
-        "arcane-kitchen-description": "ユーザーが楽しく、健康的な食事を摂ることを目的としたファンタジーRPGがテーマの食事計画アプリ",
-        "solo": "ソロ",
-        "ichigo-title": "いち Go!",
-        "ichigo-description": "どれだけ長く走り続けられるか試してみて！",
-        "goraku-title": "ごらく",
-        "goraku-description": "言語学習者向けに、お気に入りのアニメや番組から音声クリップを取得し、自動的に裏表のフラッシュカードに変換できるアプリ"
-    }
+  "navbar": {
+    "about": "私について",
+    "skills": "スキル",
+    "projects": "プロジェクト"
+  },
+
+  "hero": {
+    "greeting": "こんにちは、",
+    "I": "マット",
+    "Matt": "です"
+  },
+  "about": {
+    "title": "私について",
+    "from": "アメリカ出身で",
+    "live": "現在は熊本市に住んでいます。",
+    "university": "大学で物理を専攻しました。",
+    "teach": "大学卒業後、日本で英語の先生(ALT)として働いていた経験があります。",
+    "engineer1": "現在は、リモートソフトウェアエンジニアとして、チームプロジェクト",
+    "engineer2": "とソロプロジェクトをしています。",
+    "hobby": "趣味は、ランニングやサイクリングなど自然を楽しむことが好きです。",
+    "collaborate": "ぜひ私のプロジェクトをご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
+  },
+  "skills": {
+    "title": "スキル",
+    "languages": "言語",
+    "frontend": "フロントエンド",
+    "backend": "バックエンドとデータベース",
+    "testing": "テストとデプロイ"
+  },
+  "projects": {
+    "title": "プロジェクト",
+    "team": "チーム",
+    "findadoc-title": "FINDADOC, JAPAN",
+    "findadoc-description": "日本に住んでいる外国人向けに、医療機関を探す際、母国語で探す手助けをするNPO団体",
+    "arcane-kitchen-title": "アーケーンキッチン",
+    "arcane-kitchen-description": "ユーザーが楽しく、健康的な食事を摂ることを目的としたファンタジーRPGがテーマの食事計画アプリ",
+    "solo": "ソロ",
+    "ichigo-title": "いち Go!",
+    "ichigo-description": "どれだけ長く走り続けられるか試してみて！",
+    "goraku-title": "ごらく",
+    "goraku-description": "言語学習者向けに、お気に入りのアニメや番組から音声クリップを取得し、自動的に裏表のフラッシュカードに変換できるアプリ"
+  }
 }
