feat: call to action button in hero section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,8 @@
   "hero": {
     "greeting": "Hi,",
     "I": "I'm",
-    "Matt": "Matt"
+    "Matt": "Matt",
+    "button": "Learn about me"
   },
   "about": {
     "title": "About me",
