--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -8,7 +8,8 @@
   "hero": {
     "greeting": "こんにちは、",
     "I": "マット",
-    "Matt": "です"
+    "Matt": "です",
+    "button": "私について"
   },
   "about": {
     "title": "私について",
