refactor: add portfolio to project list

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,8 @@
     "arcane-kitchen-title": "Arcane Kitchen",
     "arcane-kitchen-description": "A fantasy RPG themed meal planning app that aims to motivate users to eat healthy in a fun and engaging way.",
     "solo": "Solo",
+    "website-title": "Personal Website",
+    "website-description": "You're looking at it! This is where I share my background, my other projects, and practice my web development",
     "ichigo-title": "IchiGo",
     "ichigo-description": "A game where you are so excited to eat strawberries that you just keep running faster and faster! But be careful not to hit the other runners! See how long you can keep running in Ichi Go!",
     "goraku-title": "GoRaku",
