--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -37,6 +37,8 @@
     "arcane-kitchen-title": "アーケーンキッチン",
     "arcane-kitchen-description": "ユーザーが楽しく、健康的な食事を摂ることを目的としたファンタジーRPGがテーマの食事計画アプリ",
     "solo": "ソロ",
+    "website-title": "Personal Website",
+    "website-description": "You're looking at it! This is where I share my background, my other projects, and practice my web development",
     "ichigo-title": "いち Go!",
     "ichigo-description": "どれだけ長く走り続けられるか試してみて！",
     "goraku-title": "ごらく",
