fix: reword find a doc exp and adjust locale

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,8 +16,7 @@
     "live": "I live in Kumamoto, Japan",
     "university": "I studied Physics in university",
     "teach": "After university, I taught English in Japan",
-    "engineer1": "I'm currently a remote software engineer working on team",
-    "engineer2": "and solo projects",
+    "engineer1": "I'm currently a software engineer at",
     "hobby": "When I'm not coding, I like to run, cycle, and enjoy nature",
     "collaborate": "Feel free to check out my projects or reach out if you'd like to collaborate"
   },
