--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -17,8 +17,8 @@
     "live": "現在は熊本市に住んでいます。",
     "university": "大学で物理を専攻しました。",
     "teach": "大学卒業後、日本で英語の先生(ALT)として働いていた経験があります。",
-    "engineer1": "現在は、リモートソフトウェアエンジニアとして、チームプロジェクト",
-    "engineer2": "とソロプロジェクトをしています。",
+    "engineer1": "現在は、",
+    "engineer2": "でソフトウェアエンジニアとして働いています。", 
     "hobby": "趣味は、ランニングやサイクリングなど自然を楽しむことが好きです。",
     "collaborate": "ぜひ私のプロジェクトをご覧ください。また、コラボレーションをご希望の場合はご連絡ください。"
   },
